@@ -11,8 +11,9 @@
 package org.freedesktop.dbus.test;
 
 import org.freedesktop.dbus.DBusConnection;
+import org.freedesktop.dbus.DBusSigHandler;
 
-public class two_part_test_server implements TwoPartInterface
+public class two_part_test_server implements TwoPartInterface, DBusSigHandler<TwoPartInterface.TwoPartSignal>
 {
    public class two_part_test_object implements TwoPartObject
    {
@@ -37,11 +38,17 @@ public class two_part_test_server implements TwoPartInterface
       System.out.println("give new");
       return o;
    }
+   public void handle(TwoPartInterface.TwoPartSignal s)
+   {
+      System.out.println("Got: "+s.o);
+   }
    public static void main(String[] args) throws Exception
    {
       DBusConnection conn = DBusConnection.getConnection(DBusConnection.SESSION);
       conn.requestBusName("org.freedesktop.dbus.test.two_part_server");
-      conn.exportObject("/", new two_part_test_server(conn));
+      two_part_test_server server = new two_part_test_server(conn);
+      conn.exportObject("/", server);
+      conn.addSigHandler(TwoPartInterface.TwoPartSignal.class, server);
       while (true) try { Thread.sleep(10000); } catch (InterruptedException Ie) {}
    }
 }
